--- a/index.html
+++ b/index.html
@@ -321,14 +321,15 @@
                                     <p class="text__title">Platform Idea</p>
                                 </div>
                                 <div class="text__description">
-                                    <p class="text__description">Our owners were faced with the need to make a lot of crypto
+                                    <p class="text__description">Our owners were faced with the need to make a lot of
+                                        crypto
                                         transactions and exchange
                                         cryptocurrency really quickly. This is how Cryptochange was born.</p>
                                 </div>
                             </div>
                         </div>
-                    </div> 
-                    <div class="table__column">  
+                    </div>
+                    <div class="table__column">
                         <div>
                             <!--Css code-->
                         </div>
@@ -341,7 +342,8 @@
                                     <p class="text__title">MVP Development</p>
                                 </div>
                                 <div class="text__description">
-                                    <p class="text__description">We have been developing our MVP for almost six months to
+                                    <p class="text__description">We have been developing our MVP for almost six months
+                                        to
                                         take
                                         into account all the
                                         problems that exist in the crypto payments and exchange market.</p>
@@ -349,7 +351,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="table__column">    
+                    <div class="table__column">
                         <div>
                             <!--Css code-->
                         </div>
@@ -362,16 +364,18 @@
                                     <p class="text__title">Pitching at Crypto Expo 2021</p>
                                 </div>
                                 <div class="text__description">
-                                    <p class="text__description">We presented our project at Crypto Expo 2021 in Seoul for
+                                    <p class="text__description">We presented our project at Crypto Expo 2021 in Seoul
+                                        for
                                         the
                                         first time and received a
-                                        lot of positive feedback, as well as constructive criticism, which helped us to move
+                                        lot of positive feedback, as well as constructive criticism, which helped us to
+                                        move
                                         forward.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="table__column">    
+                    <div class="table__column">
                         <div>
                             <!--Css code-->
                         </div>
@@ -392,7 +396,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="table__column">   
+                    <div class="table__column">
                         <div>
                             <!--Css code-->
                         </div>
@@ -413,7 +417,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="table__column">    
+                    <div class="table__column">
                         <div>
                             <!--Css code-->
                         </div>
@@ -434,7 +438,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="table__column">    
+                    <div class="table__column">
                         <div>
                             <!--Css code-->
                         </div>
@@ -453,7 +457,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>    
+                    </div>
                 </div>
             </div>
         </section>
@@ -960,87 +964,112 @@
                             <h3 class="text__name-investor-kilian-smith">Killian Smith</h3>
                             <div class="subtext__speech-investor-kilian-smith">
 
-                <div class="block__investor-kilian-smith smith-block">
-                    <div class="block__investor-kilian-smith-photo">
-                        <img class="photo__investor-kilian-smith smith-photo"
-                            src="img/investors_photos/investor_killian_smith.png" alt="Kilian Smith Photo">
-                        <div class="block__textname-investor-kilian-smith">
-                            <h3 class="text__name-investor-kilian-smith">Killian Smith</h3>
-                            <div class="block__subtext-speech-investor-kilian-smith">
+                                <div class="block__investor-kilian-smith smith-block">
+                                    <div class="block__investor-kilian-smith-photo">
+                                        <img class="photo__investor-kilian-smith smith-photo"
+                                            src="img/investors_photos/investor_killian_smith.png"
+                                            alt="Kilian Smith Photo">
+                                        <div class="block__textname-investor-kilian-smith">
+                                            <h3 class="text__name-investor-kilian-smith">Killian Smith</h3>
+                                            <div class="block__subtext-speech-investor-kilian-smith">
 
-                                <p class="subtext__text-speech-investor-kilian-smith">«When I first met the
-                                    Cryptochange team at Crypto Expo 2022, I realized they had
-                                    a really great idea and almost everything they needed for its implementation.»
-                                </p>
-                            </div>
+                                                <p class="subtext__text-speech-investor-kilian-smith">«When I first met
+                                                    the
+                                                    Cryptochange team at Crypto Expo 2022, I realized they had
+                                                    a really great idea and almost everything they needed for its
+                                                    implementation.»
+                                                </p>
+                                            </div>
 
-                            <div class="date__post-speech-investor-kilian-smith-">
+                                            <div class="date__post-speech-investor-kilian-smith-">
 
-                            <div class="date__post-speech-investor-kilian-smith">
-
-
-                            <div class="date__post-speech-investor-kilian-smith">
-
-                                <p>December 15, 2022</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                                                <div class="date__post-speech-investor-kilian-smith">
 
 
-                <div class="block__investor-diana-johnson">
-                    <div class="block__investor-diana-johnson-photo">
-                        <img class="photo__investor-diana-johnson investor-johnson"
-                            src="img/investors_photos/investor_diana_johnson.png" alt="Diana Johnson Photo">
-                        <div class="block__texname-investor-diana-johnson">
-                            <h3 class="text__name-investor-diana-johnson">Diana Johnson</h3>
-                            <div class="subtext__speech-investor-diana-johnson">
+                                                    <div class="date__post-speech-investor-kilian-smith">
+
+                                                        <p>December 15, 2022</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
 
 
-                <div class="block__investor-diana-johnson johnson-block">
-                    <div class="block__investor-diana-johnson-photo">
-                        <img class="photo__investor-diana-johnson johnson-photo"
-                            src="img/investors_photos/investor_diana_johnson.png" alt="Diana Johnson Photo">
-                        <div class="block__texname-investor-diana-johnson">
-                            <h3 class="text__name-investor-diana-johnson">Diana Johnson</h3>
-                            <div class="block__subtext-speech-investor-diana-johnson">
-
-                                <p class="subtext__text-speech-investor-diana-johnson">«I believe that fast and
-                                    zero-fee exchanges are crucial for the crypto market to
-                                    be treated seriously by financial giants. That's why I believe in Cryptochange.»
-                                </p>
-                            </div>
-                            <div class="block__date-post-speech-investor-diana-johnson">
-                                <p class="text__date-post-speech-investor-diana-johnson">April 21, 2022</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="block__investor-dean-stuart">
-
-                <div class="block__investor-dean-stuart stuart-block">
+                                        <div class="block__investor-diana-johnson">
+                                            <div class="block__investor-diana-johnson-photo">
+                                                <img class="photo__investor-diana-johnson investor-johnson"
+                                                    src="img/investors_photos/investor_diana_johnson.png"
+                                                    alt="Diana Johnson Photo">
+                                                <div class="block__texname-investor-diana-johnson">
+                                                    <h3 class="text__name-investor-diana-johnson">Diana Johnson</h3>
+                                                    <div class="subtext__speech-investor-diana-johnson">
 
 
-                <div class="block__investor-dean-stuart stuart-block">
+                                                        <div class="block__investor-diana-johnson johnson-block">
+                                                            <div class="block__investor-diana-johnson-photo">
+                                                                <img class="photo__investor-diana-johnson johnson-photo"
+                                                                    src="img/investors_photos/investor_diana_johnson.png"
+                                                                    alt="Diana Johnson Photo">
+                                                                <div class="block__texname-investor-diana-johnson">
+                                                                    <h3 class="text__name-investor-diana-johnson">Diana
+                                                                        Johnson</h3>
+                                                                    <div
+                                                                        class="block__subtext-speech-investor-diana-johnson">
 
-                    <div class="block__investor-dean-stuart-photo">
-                        <img class="photo__investor-dean-stuart stuart-photo"
-                            src="img/investors_photos/investor_dean_stuart.png" alt="Dean Stuart Photo">
-                        <div class="block__textname-investor-dean-stuart">
-                            <h3 class="text__name-investor-dean-stuart">Dean Stuart</h3>
-                            <div class="block__subtext-speech-investor-dean-stuart">
-                                <p class="subtext__text-speech-investor-dean-stuart">«I communicate with dozens of
-                                    crypto projects every month. However, Cryptochange
-                                    seemed to me to be very smart guys with an important idea.»</p>
-                            </div>
-                            <div class="block__date-post-speech-investor-dean-stuart">
-                                <p class="text__date-post-speech-investor-dean_stuart">June 12, 2022</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                                                                        <p
+                                                                            class="subtext__text-speech-investor-diana-johnson">
+                                                                            «I believe that fast and
+                                                                            zero-fee exchanges are crucial for the
+                                                                            crypto market to
+                                                                            be treated seriously by financial giants.
+                                                                            That's why I believe in Cryptochange.»
+                                                                        </p>
+                                                                    </div>
+                                                                    <div
+                                                                        class="block__date-post-speech-investor-diana-johnson">
+                                                                        <p
+                                                                            class="text__date-post-speech-investor-diana-johnson">
+                                                                            April 21, 2022</p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="block__investor-dean-stuart">
+
+                                                            <div class="block__investor-dean-stuart stuart-block">
+
+
+                                                                <div class="block__investor-dean-stuart stuart-block">
+
+                                                                    <div class="block__investor-dean-stuart-photo">
+                                                                        <img class="photo__investor-dean-stuart stuart-photo"
+                                                                            src="img/investors_photos/investor_dean_stuart.png"
+                                                                            alt="Dean Stuart Photo">
+                                                                        <div
+                                                                            class="block__textname-investor-dean-stuart">
+                                                                            <h3 class="text__name-investor-dean-stuart">
+                                                                                Dean Stuart</h3>
+                                                                            <div
+                                                                                class="block__subtext-speech-investor-dean-stuart">
+                                                                                <p
+                                                                                    class="subtext__text-speech-investor-dean-stuart">
+                                                                                    «I communicate with dozens of
+                                                                                    crypto projects every month.
+                                                                                    However, Cryptochange
+                                                                                    seemed to me to be very smart guys
+                                                                                    with an important idea.»</p>
+                                                                            </div>
+                                                                            <div
+                                                                                class="block__date-post-speech-investor-dean-stuart">
+                                                                                <p
+                                                                                    class="text__date-post-speech-investor-dean_stuart">
+                                                                                    June 12, 2022</p>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
         </section>
         <section class="section__news-block-column">
             <div class="block__list-column-crypto-news">
