add yellow line

--- a/index.html
+++ b/index.html
@@ -675,7 +675,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="application__view">
                     <div class="application__background">
                         <img src="img/background_phone.webp" alt="background phone">
@@ -697,9 +696,8 @@
         <!--8 section-->
         <!--Recommendation-add class name into tags (h2,div,li)-->
         <section id="team">
-
             <div class="experienced__team-and-job-opportunities">
-                <!--yellow line-->
+                
                 <div class="experienced__team">
                     <div class="experienced__title-container">
                         <img class="experienced__title-line" src="img/yellow_line.png" alt="">
@@ -873,7 +871,7 @@
                 you.
             </p>
             <a href="#footer">Contact Us</a>
-            <a href="#why__cryptochange">Learn More
+            <a  href="#why__cryptochange">Learn More &rarr;
                 <!--white arrow-->
             </a>
             </div>
