visual css block 2

--- a/index.html
+++ b/index.html
@@ -60,12 +60,7 @@
         <!--add class name into tags (p,button,div)-->
         <section id="why__cryptochange" class="why__wrapper">
             <div class="why__cryptochange-block">
-                <!--
-                    <span class="#">
-                    </span> 
-                    yellow line before the title 
-                -->
-                <h2 class="why__header">Why cryptochange?</h2>
+                <h2 class="why__header"><span class="yellow__line-o">-</span>Why cryptochange?</h2>
                 <div class="text__wrapper">
                     <div class="text__container-bolt-font">
                         <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
