Added some footer css

--- a/index.html
+++ b/index.html
@@ -1216,62 +1216,67 @@
         <!--end of section 10-->
     </main>
     <footer id="footer" class="footer">
-        <div class="footer__company-info">
-            <a href="#" class="footer__company-info-logo">
-                <img src="img/cryptochange-logo.svg" width="190" alt="cryptochange-logo"
-                    class="footer__company-info-logo">
-            </a>
-            <p class="footer__company-info-description">
-                We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users from
-                around the world.
-            </p>
-            <a href="#" class="footer__company-info-buy-crp-tokens">Buy CRP tokens →</a>
-        </div>
-        <div class="footer__useful-links">
-            <h3 class="footer__useful-links-header">Useful Links</h3>
-            <nav class="footer__useful-links-menu">
-                <a href="#" class="footer__useful-links-menu-item">About</a>
-                <a href="#" class="footer__useful-links-menu-item">Roadmap</a>
-                <a href="#" class="footer__useful-links-menu-item">Distribution</a>
-                <a href="#" class="footer__useful-links-menu-item">App</a>
-                <a href="#" class="footer__useful-links-menu-item">Whitepaper</a>
-                <a href="#" class="footer__useful-links-menu-item">Team</a>
-                <a href="#" class="footer__useful-links-menu-item">Press</a>
-                <a href="#" class="footer__useful-links-menu-item">Feedback</a>
-            </nav>
-        </div>
-        <div class="footer__follow-us-info">
-            <h3 class="footer__follow-us-header">Follow Us</h3>
-            <p class="footer__follow-us-paragraph">We're building a strong crypto community that will boost the adoption
-                of blockchain-based projects in the financial market.
-            </p>
-            <a href="#" class="footer__follow-us-want-to-know-more">Want to know more? →</a>
-            <div class="footer__company-info-icons">
-                <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/facebook-icon.svg" alt="facebook-icon" width="33"
-                        class="footer__company-info-icons-facebook-icon">
+        <div class="footer__footer_wrapper">
+            <div class="footer__company-info">
+                <a href="#" class="footer__company-info-logo">
+                    <img class="footer__company-info-logo" src="img/cryptochange-logo.svg" alt="cryptochange-logo">
                 </a>
-                <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/instagram-icon.svg" alt="instagram-icon" width="33"
-                        class="footer__company-info-icons-instagram-icon">
-                </a>
-                <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/twitter-icon.svg" alt="twitter-icon" width="33"
-                        class="footer__company-info-icons-twitter-icon">
-                </a>
-                <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/youtube-icon.svg" alt="youtube-icon" width="33"
-                        class="footer__company-info-icons-youtube-icon">
-                </a>
-                <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/email-icon.svg" alt="email-icon" width="33"
-                        class="footer__company-info-icons-email-icon">
-                </a>
+                <p class="footer__company-info-description">
+                    We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users from
+                    around the world.
+                </p>
+                <a href="#" class="footer__company-info-buy-crp-tokens">Buy CRP tokens →</a>
             </div>
-        </div>
-        <div class="footer__copyright">
-            <p class="footer__copyright-description-item">© Created by</p>
-            <p class="footer__copyright-description-item">All rights Reserved</p>
+            <div class="footer__useful-links">
+                <h3 class="footer__useful-links-header">Useful Links</h3>
+                <div class="footer__useful-links-header-underline">-</div>
+                <nav class="footer__useful-links-menu">
+                    <a href="#" class="footer__useful-links-menu-item">About</a>
+                    <a href="#" class="footer__useful-links-menu-item">Roadmap</a>
+                    <a href="#" class="footer__useful-links-menu-item">Distribution</a>
+                    <a href="#" class="footer__useful-links-menu-item">App</a>
+                    <a href="#" class="footer__useful-links-menu-item">Whitepaper</a>
+                    <a href="#" class="footer__useful-links-menu-item">Team</a>
+                    <a href="#" class="footer__useful-links-menu-item">Press</a>
+                    <a href="#" class="footer__useful-links-menu-item">Feedback</a>
+                </nav>
+            </div>
+            <div class="footer__follow-us-info">
+                <h3 class="footer__follow-us-header">Follow Us</h3>
+                <div class="footer__follow-us-header-underline">-</div>
+                <p class="footer__follow-us-paragraph">We're building a strong crypto community that will boost the
+                    adoption
+                    of blockchain-based projects in the financial market.
+                </p>
+                <a href="#" class="footer__follow-us-want-to-know-more">Want to know more? →</a>
+                <div class="footer__company-info-icons">
+                    <a href="#" class="footer__company-info-icons-item">
+                        <img src="img/facebook-icon.svg" alt="facebook-icon" width="33"
+                            class="footer__company-info-icons-facebook-icon">
+                    </a>
+                    <a href="#" class="footer__company-info-icons-item">
+                        <img src="img/instagram-icon.svg" alt="instagram-icon" width="33"
+                            class="footer__company-info-icons-instagram-icon">
+                    </a>
+                    <a href="#" class="footer__company-info-icons-item">
+                        <img src="img/twitter-icon.svg" alt="twitter-icon" width="33"
+                            class="footer__company-info-icons-twitter-icon">
+                    </a>
+                    <a href="#" class="footer__company-info-icons-item">
+                        <img src="img/youtube-icon.svg" alt="youtube-icon" width="33"
+                            class="footer__company-info-icons-youtube-icon">
+                    </a>
+                    <a href="#" class="footer__company-info-icons-item">
+                        <img src="img/email-icon.svg" alt="email-icon" width="33"
+                            class="footer__company-info-icons-email-icon">
+                    </a>
+                </div>
+            </div>
+            <hr class="footer__line">
+            <div class="footer__copyright">
+                <p class="footer__copyright-description-item">© Created by</p>
+                <p class="footer__copyright-description-item">All rights Reserved</p>
+            </div>
         </div>
     </footer>
 </body>
