css block seven

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                 <!--carousel-->
                 <div class="features__carousel-block">
                     <!--carousel block one-->
-                    <img src="img/background_carousel.svg" alt="background carousel"> <!-- add class -->
+                    <!--img src="img/background_carousel.svg" alt="background carousel"> add class -->
                     <div class="features__carousel-gradient">
                         <!-- полоса градіента -->
                     </div>
